# Lightning

./: .eslint.config.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LightningDashboard.html  README.md  SummonerSpellTracker.html  eslint.config.ts  index.html  index_copy.html  log.json  package-lock.json  package.json  pnpm-lock.yaml  sonar-project.properties  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  main.yml  publish.yml  rust-ci.yml  rust-clippy.yml
apps/desktop/: LightningDashboard.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/api/: champion_list.rs  lcu_api.rs  mod.rs  riot.rs
apps/desktop/src-tauri/src/commands/: current_match.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/repo/: dashboard_repo.rs  live_game_repo.rs  mastery_repo.rs  match_repo.rs  participants_repo.rs  stats_repo.rs  summoner_repo.rs
apps/desktop/src-tauri/src/services/: dashboard_service.rs  dashboard_service_tests.rs
apps/desktop/src-tauri/src/types/: data_objects.rs  match_data.rs  riot_api_client.rs
apps/desktop/src-tauri/src/utils/: champions.rs  credentials.rs  mod.rs  time.rs
apps/desktop/src-tauri/tests/: test_dashboard_service.rs
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
assets/: index-BjWchnWw.js  index-C4wByVAd.js  index-CRvj7d3G.js  index-D3La8--v.css  index-hbGRahvU.js  index-wLxhyE24.css
src/: .env.example  App.css  App.tsx  App_copy.css  App_copy.tsx  LightningDashboard.tsx  SummonerSpellMain.tsx  main_copy.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window-control.json
src-tauri/src/: api.rs  config.rs  current_match.rs  error.rs  lib.rs  main.rs  match_data.rs
src-tauri/src/api/: champion_list.rs  data_dragon.rs  lcu.rs  lcu_api.rs  mod.rs  riot.rs
src-tauri/src/clients/: mod.rs  riot.rs
src-tauri/src/commands/: current_match.rs  dashboard.rs  mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/db/: init.rs  schema.sql
src-tauri/src/repo/: dashboard_repo.rs  live_game_repo.rs  mastery_repo.rs  match_repo.rs  mod.rs  participants_repo.rs  stats_repo.rs  summoner_repo.rs
src-tauri/src/services/: dashboard_service.rs  mod.rs
src-tauri/src/types/: dashboard.rs  data_objects.rs  lcu_api.rs  match_data.rs  mod.rs  response.rs  riot_api_client.rs
src-tauri/src/utils/: champions.rs  file.rs  locks.rs  mod.rs  time.rs
src/components/: AppLayout.tsx  ChampionIcon.tsx  ChampionMasteryCard.tsx  DashboardHeader.tsx  LiveGameStatus.tsx  MatchHistoryItem.tsx  (+7 more)
test/: package.json.test.mjs
tests/: gitignore.test.js  indexHtmlAssets.test.js  jest.config.test.js  lightningDashboard.test.js
(+34 files in other folders)
