[package]
name = "lightning"
version = "0.1.3"
description = "A Tauri App"
authors = ["TheGrieferKnight"]
edition = "2021"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lightning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.142"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
anyhow = "1.0.99"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["windows-native"] }
once_cell = "1.21.3"
